--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Audio Recorder</string>
+    <string name="app_ver">v1.0</string>
 
     <string name="aar_save">Save</string>
     <string name="aar_paused">Paused</string>
